# A_AM

./: CMakeLists.txt  README.md
ExampleDLL/: CMakeLists.txt  ExampleDLL.cpp  ExampleDLL.h
include/: EPparseFile.h  bst-File.h  copyingFile.h  listNames.h  parser.h  searchInFile.h
sources/: main.cpp
